--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@headlessui/tailwindcss": "0.2.0",
     "@heroicons/react": "2.0.18",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.14.2"
   },
   "devDependencies": {
     "@types/react": "18.2.18",
