--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@trpc/server": "10.37.1",
     "argon2": "0.31.0",
     "cors": "2.8.5",
+    "dotenv": "16.3.1",
     "jsonwebtoken": "9.0.1",
     "zod": "3.21.4"
   },
