--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,10 @@
     "@headlessui/react": "1.7.16",
     "@headlessui/tailwindcss": "0.2.0",
     "@heroicons/react": "2.0.18",
+    "@tanstack/react-query": "4.32.5",
+    "@trpc/client": "10.37.1",
+    "@trpc/react-query": "10.37.1",
+    "@trpc/server": "10.37.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.14.2"
