--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "start": "node dist/main.js",
     "dev": "tsc-watch --onSuccess \"node dist/main.js\"",
     "build": "tsc",
-    "db.sync": "npx prisma db push --schema src/prisma/schema.prisma && npx prisma generate --schema src/prisma/schema.prisma"
+    "db.sync": "npx prisma db push --schema src/prisma/schema.prisma && npx prisma generate --schema src/prisma/schema.prisma",
+    "db.studio": "npx prisma studio --schema src/prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "5.1.1",
