--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "start": "node dist/main.js",
     "dev": "tsc-watch --onSuccess \"node dist/main.js\"",
-    "build": "tsc",
-    "db.sync": "npx prisma db push --schema src/prisma/schema.prisma && npx prisma generate --schema src/prisma/schema.prisma",
-    "db.studio": "npx prisma studio --schema src/prisma/schema.prisma"
+    "build": "tsc"
   },
   "dependencies": {
     "@prisma/client": "5.1.1",
@@ -29,5 +27,8 @@
     "prisma": "5.1.1",
     "tsc-watch": "6.0.4",
     "typescript": "5.1.6"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   }
 }
