--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@trpc/client": "10.37.1",
     "@trpc/react-query": "10.37.1",
     "@trpc/server": "10.37.1",
+    "dayjs": "1.11.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.2",
